# arrowspace-rs

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE_MIT  README.md  RESEARCH.md  paper.bib  paper.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
benches/: base_index_bench.rs  base_laplacian_bench.rs  index_compute_bench.rs  lookup_bench.rs
benches/baselines/: base_index_bench.json  base_laplacian_bench.json
examples/: 01_compare_cosine.rs  02_proteins_lookup.rs  03_compare_energy_cosine.rs  compare_cosine.rs  merge_signals.rs  proteins_lookup.rs
examples/common/: lib.rs
src/: builder.rs  clustering.rs  core.rs  dimensional.rs  eigenmaps.rs  energymaps.rs  graph.rs  graph_factory.rs  laplacian.rs  lib.rs  operators.rs  reduction.rs  sampling.rs  sparsification.rs  taumode.rs
src/storage/: mod.rs  parquet.rs  test_storage.rs
src/tests/: mod.rs  test_arrow.rs  test_builder.rs  test_clustering.rs  test_data.rs  test_dimensional.rs  test_dimensional_ops.rs  test_eigenmaps.rs  test_energy_builder.rs  test_energy_search.rs  test_graph_factory.rs  test_helpers.rs  test_laplacian.rs  test_laplacian_unnormalised.rs  test_operators.rs  test_protein_lookup.rs  test_querying_proj.rs  test_random_walk_molecules.rs  test_reduction.rs  test_sparsification.rs  test_taumode.rs  test_two_emitters_compare.rs
