[package]
name = "arrowspace"
version = "0.1.0"
edition = "2024"
description = "Spectral vector search with taumode (λτ) indexing"
authors = ["Lorenzo <tunedconsulting@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Mec-iS/arrowspace-rs"
homepage = "https://github.com/Mec-iS/arrowspace-rs"
documentation = "https://docs.rs/arrowspace"
readme = "README.md"
keywords = ["vector-search", "spectral-analysis", "graph-signal", "similarity-search", "machine-learning"]
categories = ["algorithms", "mathematics", "science"]
exclude = [
    "target/*",
    "Cargo.lock",
    ".git/*",
    ".github/*",
    "*.tmp"
]

[dependencies]
rand = "0.9.2"
smartcore = "*"
ordered-float = "5.0.0"

[dev-dependencies]
criterion = "*"

[lib]
name = "arrowspace"
crate-type = ["rlib"]

[examples]
range-set-blaze = "*"

[workspace]

[[bench]]
name = "lookup_bench"
harness = false

