[package]
name = "arrowspace"
version = "0.3.0"
edition = "2024"
description = "Spectral vector search with taumode (λτ) indexing"
authors = ["Lorenzo <tunedconsulting@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Mec-iS/arrowspace-rs"
homepage = "https://github.com/Mec-iS/arrowspace-rs"
documentation = "https://docs.rs/arrowspace-rs"
readme = "README.md"
keywords = ["vector-search", "spectral-analysis", "graph-signal", "similarity-search", "machine-learning"]
categories = ["algorithms", "mathematics", "science"]
exclude = [
    "target/*",
    "Cargo.lock",
    ".git/*",
    ".github/*",
    "*.tmp"
]

[dependencies]
rand = "0.9.2"
smartcore = "0.4.3"
ordered-float = "5.0.0"
rayon = "1.11.0"
approx = "0.5.1"
log = "0.4.28"
env_logger = "0.11.8"

[dev-dependencies]
criterion = "0.7.0"

[lib]
name = "arrowspace"
crate-type = ["rlib"]

[examples]

[workspace]

[[bench]]
name = "index_compute_bench"
harness = false

